src/ui/select/Select.module.scss
.selectWrapper {
	position: relative;
}

.container {
	display: flex;
	flex-direction: column;
	row-gap: 4px;
}

.arrow {
	position: absolute;
	top: 50%;
	right: 6px;
	width: 24px;
	margin-top: -12px;
	transition: transform 0.2s ease-in-out, margin-top 0.2s ease-in-out;
}

.placeholder {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	box-sizing: border-box;
	width: 100%;
	height: 50px;
	padding: 15px 17px;
	background: rgb(255 255 255);
	outline: 1px solid #000000;
	cursor: pointer;
}

.placeholder[data-selected='true'] {
	color: rgb(0 0 0);
}

.selectWrapper[data-is-active='true'] .arrow {
	margin-top: -14px;
	transform: rotate(180deg);
}

.selectWrapper[data-is-active='true'] .placeholder {
	outline: 3px solid #000000;
}

.selectWrapper:not([data-is-active='true'])
	.placeholder:not([data-status='invalid']):hover {
	outline: 1px solid #ffc802;
}

.select {
	position: absolute;
	z-index: 10;
	display: grid;
	box-sizing: border-box;
	width: 100%;
	margin: 0;
	padding: 0;
	list-style: none;
	background-color: rgb(255 255 255 / 100%);
	border-top: none;
	outline: 3px solid #000000;
}

.option {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	height: 30px;
	padding: 15px 17px;
	background-color: rgb(255 255 255 / 100%);
	border: 1px;
	cursor: pointer;
}

.option[aria-selected='true'] {
	background-color: rgb(0 0 0 / 5%);
}

.option:hover {
	background: var(--grey-accent, #EEEEEE);
}

.option:active {
	background: var(--grey-highlight, #D7D7D7);
}

@mixin option-color-before {
	content: '';
	width: 35px;
	height: 35px;
	margin-right: 10px;
}

.option-black::before {
	@include option-color-before;
	background-color: #000000;
}

@mixin option-color-after {
	content: '';
	position: absolute;
	left: 26px;
	width: 17px;
	height: 17px;
	border-radius: 100%;
}

.option-black[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

.option-white::before {
	@include option-color-before;
	box-sizing: border-box;
	background-color: #ffffff;
	border: 1px solid #000000;
}

.option-white[data-selected='true']::after {
	@include option-color-after;
	background-color: #000000;
}

.option-gray::before {
	@include option-color-before;
	background-color: #c4c4c4;
}

.option-gray[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

.option-pink::before {
	@include option-color-before;
	background-color: #feafe8;
}

.option-pink[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

.option-fuchsia::before {
	@include option-color-before;
	background-color: #fd24af;
}

.option-fuchsia[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

.option-yellow::before {
	@include option-color-before;
	background-color: #ffc802;
}

.option-yellow[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

.option-green::before {
	@include option-color-before;
	background-color: #80d994;
}

.option-green[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

.option-blue::before {
	@include option-color-before;
	background-color: #6fc1fd;
}

.option-blue[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

.option-purple::before {
	@include option-color-before;
	background-color: #5f0dee;
}

.option-purple[data-selected='true']::after {
	@include option-color-after;
	background-color: #ffffff;
}

@mixin option-width-before {
	content: '';
	width: 25px;
	height: 25px;
	margin-right: 10px;
}

.option-wide::before {
	@include option-width-before;
	background-image: url('../../images/wide.svg');
}

.option-narrow::before {
	@include option-width-before;
	background-image: url('../../images/narrow.svg');
}

